--- a/app3/index.html
+++ b/app3/index.html
@@ -19,9 +19,9 @@ window.onload=()=>{
   //logger({hide: true})
   //logger({posx:-65, posy:-65})
   //logger({posx:-65, posy:-65, hide: true})
-  //logger({pwa: true})
-  logger({rec: "cache"})
+  //logger({rec: "cache"})
   //logger()
+  logger({pwa: true})
 
 /*
   logger({rec: "local"})
