--- a/app3/index.html
+++ b/app3/index.html
@@ -38,6 +38,7 @@ window.onload=()=>{
 
 
   logger.log("index.html: start")
+  document.addEventListener("dblclick", function(e){ e.preventDefault();}, { passive: false });
 
   document.body.insertAdjacentHTML("beforeend", String.raw`
     <style>
