--- a/app3/index.html
+++ b/app3/index.html
@@ -17,7 +17,7 @@ window.onload=()=>{
   //logger({posx:-65, posy:-65})
   //logger({hide: true})
 
-  logger({sw: true, pos: "left-bottom"})
+  logger({sw: true, cdn: false, pos: "left-bottom"})
 
   //logger({cdn: false, hide: false, posx: 65, posy: -130})
   //logger({pos: "left-top", posx:-30, posy:-30})
