--- a/app3/index.html
+++ b/app3/index.html
@@ -64,7 +64,8 @@ window.onload=()=>{
         justify-content: center;
       }
       .btn {
-        font-size: 1.5rem;
+        font-size: 1rem;
+        color: #000000;
         width: 20vw;
         margin: 10px;
         box-shadow: 0 0 3px 0 rgb(0 0 0 / 12%), 0 2px 3px 0 rgb(0 0 0 / 22%);
