--- a/app3/index.html
+++ b/app3/index.html
@@ -62,7 +62,7 @@ window.onload=()=>{
       .rect {
         color: #000000;
         box-shadow: 0 0 3px 0 rgb(0 0 0 / 12%), 0 2px 3px 0 rgb(0 0 0 / 22%);
-        border-radius: 6px;
+        border-radius: 3px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -71,8 +71,10 @@ window.onload=()=>{
       .btn {
         font-size: 1.2rem;
         width: 20vw;
-        margin: 10px;
-        background: #cccccc;
+        margin: 5px auto;
+        padding: 1px 6px;
+        background: #ffffff;
+        color: #000000;
       }
       .btn:active {
         -webkit-transform: translate(1px, 1px);
@@ -93,10 +95,10 @@ window.onload=()=>{
     </style>
     <div class="pos">
       <div class="btns">
-        <div id="settings" class="rect btn">settings</div>
-        <div id="send" class="rect btn">send</div>
-        <div id="recv" class="rect btn">recv</div>
-        <div id="clear" class="rect btn">clear</div>
+        <button id="setting" class="rect btn">Setting</button>
+        <button id="send" class="rect btn">Send</button>
+        <button id="recv" class="rect btn">Recv</button>
+        <button id="clear" class="rect btn">Clear</button>
       </div>
       <div id="show" class="rect area">0</div>
     </div>
@@ -162,8 +164,8 @@ window.onload=()=>{
 
 
 
-  document.getElementById("settings").addEventListener("click",()=>{
-    logger.log("settings click")
+  document.getElementById("setting").addEventListener("click",()=>{
+    logger.log("setting click")
     let res = prompt("postname?", recObj.postname)
     recObj.postname=(res)?res:recObj.postname
     logger.log("postname: " + recObj.postname)
