--- a/app3/index.html
+++ b/app3/index.html
@@ -67,8 +67,8 @@ window.onload=()=>{
       }
       .btn {
         font-family: 'Archivo Black', sans-serif;
-        font-size: 2rem;
-        width: 37vw;
+        font-size: 3rem;
+        width: 50vw;
         height: 8vh;
         margin: 3px auto;
         padding: 1px 6px;
@@ -81,7 +81,7 @@ window.onload=()=>{
         transform: translate(1px, 1px);
       }
       .area {
-        font-size: 19rem;
+        font-size: 17rem;
         width: 80vw;
         height: 70vh;
         background: #cdddbd;
@@ -103,7 +103,6 @@ window.onload=()=>{
     </style>
     <div class="pos">
       <div class="btns">
-        <button id="refresh" class="btn rect">Refresh</button>
         <button id="clear" class="btn rect">Clear</button>
       </div>
       <div id="show" class="area rect">0</div>
@@ -115,6 +114,7 @@ window.onload=()=>{
   let rec = {
     count: 0,
   }
+  let frec = true
 
   const msaddclass=(q, c, ms)=>{
     const e = document.querySelector(q);
@@ -125,29 +125,53 @@ window.onload=()=>{
     return e
   }
 
-  const view=()=>{
+  const set=()=>{ //localへのset中はlocalチェックを外す
+    //logger.log("set: start")
+    frec = false
     logger.set("app", rec)
-    logger.log("touch count: " + rec.count)
+    frec = true
+    //logger.log("set: end")
+  }
+
+  const view=()=>{
+    //logger.log("view: start")
+    set()
+    logger.log("view: count: " + rec.count)
     document.getElementById("show").innerHTML=rec.count
+    //logger.log("view: end")
   }
 
   const get=()=>{
-    logger.log("get: start")
-    document.getElementById("show").innerHTML=`<font size="4">loading...</font>`
+    //logger.log("get: start")
     const res = logger.get("app")
-    if (res) rec = res
-    logger.log(`getLocal: end, rec: ${JSON.stringify(rec)}`)
-    msaddclass("#show", "flash", 50)
-    view()
-    logger.log("get: end")
+    if (res) {
+      if (res!=rec) {
+        rec =res
+        logger.log(`get: rec: ${JSON.stringify(rec)}`)
+        view()
+        msaddclass("#show", "flash", 50)
+      }
+    }
+    //logger.log("get: end")
   }
 
-  document.getElementById("refresh").addEventListener("click",()=>{
-    logger.log("refresh click")
-    rec.count = logger.get("app").count
-    view()
-    msaddclass("#show", "flash", 50)
-  })
+  const init=()=>{
+    logger.log("init: start")
+    document.getElementById("show").innerHTML=`<font size="4">loading...</font>`
+    get()
+    logger.log("init: end")
+  }
+
+
+  document.addEventListener("dblclick", e=>{
+    logger.log("double click")
+    e.preventDefault()
+  }, {passive: false})
+
+  document.body.addEventListener("click",()=>{ //bodyClickでlogger側で受信した結果をapp側に反映(app側set中はチェックskip
+    //logger.log("body: click")
+    if (frec) get()
+  });
 
   document.getElementById("clear").addEventListener("click",()=>{
     logger.log("clear click")
@@ -157,15 +181,10 @@ window.onload=()=>{
   })
 
   document.getElementById("show").addEventListener("click",()=>{
-    logger.log("show click")
+    //logger.log("show click")
     rec.count = rec.count + 1
     view()
   })
-
-  document.addEventListener("dblclick", e=>{
-    logger.log("double click")
-    e.preventDefault()
-  }, {passive: false})
 
 
 
