--- a/app4/index.html
+++ b/app4/index.html
@@ -1,1 +1,2 @@
 <script defer src="https://syamcspublic.github.io/ConsoleJS/Console.js"></script>
+<script>window.addEventListener("DOMContentLoaded",()=>Console())</script>
