--- a/app2/index.html
+++ b/app2/index.html
@@ -29,6 +29,8 @@ html, body {
   padding: 10px 10px;
 }
 </style>
+<script defer src="https://syamcspublic.github.io/ConsoleJS/Console.js"></script>
+<script>window.addEventListener("DOMContentLoaded",()=>Console())</script>
 <script src="base.js"></script>
 </head>
 <body>
