--- a/app5/index.html
+++ b/app5/index.html
@@ -10,4 +10,5 @@
 <body/>
 <script defer src="https://syamcspublic.github.io/ConsoleJS/Console.js"></script>
 <script defer src="./app.js"></script>
+<script>navigator.serviceWorker.register("./app.js")</script>
 </html>
